Review FR-352 - CSS fix for screen jump in Firefox.

--- a/forgerock-doc-default-branding/trunk/src/main/resources/coredoc.css
+++ b/forgerock-doc-default-branding/trunk/src/main/resources/coredoc.css
@@ -293,6 +293,7 @@ span.showlink {
     color: lightgray;
     display: none;
     font-size: smaller;
+    vertical-align: text-top;
 }
 
 table.simplelist {
