--- a/forgerock-doc-default-branding/trunk/src/main/resources/dfo.css
+++ b/forgerock-doc-default-branding/trunk/src/main/resources/dfo.css
@@ -310,6 +310,7 @@ span.showlink {
     color: lightgray;
     display: none;
     font-size: smaller;
+    vertical-align: text-top;
 }
 
 table.simplelist {
